err
vcz_base.cpp: In function ‘int main(int, char**)’:
vcz_base.cpp:110:15: error: no match for ‘operator=’ (operand types are ‘std::map<std::__cxx11::basic_string<char>, std::function<void(__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char>*, std::vector<std::__cxx11::basic_string<char> > >&)> >::mapped_type’ {aka ‘std::function<void(__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char>*, std::vector<std::__cxx11::basic_string<char> > >&)>’} and ‘<unresolved overloaded function type>’)
  func["EQ"] = equal;
               ^~~~~
In file included from /usr/include/c++/8/functional:59,
                 from /usr/include/aarch64-linux-gnu/c++/8/bits/stdc++.h:71,
                 from vcz_base.cpp:1:
/usr/include/c++/8/bits/std_function.h:461:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>& std::function<_Res(_ArgTypes ...)>::operator=(const std::function<_Res(_ArgTypes ...)>&) [with _Res = void; _ArgTypes = {__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > >&}]’
       operator=(const function& __x)
       ^~~~~~~~
/usr/include/c++/8/bits/std_function.h:461:7: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘const std::function<void(__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char>*, std::vector<std::__cxx11::basic_string<char> > >&)>&’
/usr/include/c++/8/bits/std_function.h:479:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>& std::function<_Res(_ArgTypes ...)>::operator=(std::function<_Res(_ArgTypes ...)>&&) [with _Res = void; _ArgTypes = {__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > >&}]’
       operator=(function&& __x) noexcept
       ^~~~~~~~
/usr/include/c++/8/bits/std_function.h:479:7: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘std::function<void(__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char>*, std::vector<std::__cxx11::basic_string<char> > >&)>&&’
/usr/include/c++/8/bits/std_function.h:493:7: note: candidate: ‘std::function<_Res(_ArgTypes ...)>& std::function<_Res(_ArgTypes ...)>::operator=(std::nullptr_t) [with _Res = void; _ArgTypes = {__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > >&}; std::nullptr_t = std::nullptr_t]’
       operator=(nullptr_t) noexcept
       ^~~~~~~~
/usr/include/c++/8/bits/std_function.h:493:7: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘std::nullptr_t’
/usr/include/c++/8/bits/std_function.h:522:2: note: candidate: ‘template<class _Functor> std::function<_Res(_ArgTypes ...)>::_Requires<std::function<_Res(_ArgTypes ...)>::_Callable<typename std::decay<_U1>::type>, std::function<_Res(_ArgTypes ...)>&> std::function<_Res(_ArgTypes ...)>::operator=(_Functor&&) [with _Functor = _Functor; _Res = void; _ArgTypes = {__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > >&}]’
  operator=(_Functor&& __f)
  ^~~~~~~~
/usr/include/c++/8/bits/std_function.h:522:2: note:   template argument deduction/substitution failed:
vcz_base.cpp:110:15: note:   couldn't deduce template parameter ‘_Functor’
  func["EQ"] = equal;
               ^~~~~
In file included from /usr/include/c++/8/functional:59,
                 from /usr/include/aarch64-linux-gnu/c++/8/bits/stdc++.h:71,
                 from vcz_base.cpp:1:
/usr/include/c++/8/bits/std_function.h:531:2: note: candidate: ‘template<class _Functor> std::function<_Res(_ArgTypes ...)>& std::function<_Res(_ArgTypes ...)>::operator=(std::reference_wrapper<_Functor>) [with _Functor = _Functor; _Res = void; _ArgTypes = {__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >*, std::vector<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::allocator<std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > > > >&}]’
  operator=(reference_wrapper<_Functor> __f) noexcept
  ^~~~~~~~
/usr/include/c++/8/bits/std_function.h:531:2: note:   template argument deduction/substitution failed:
vcz_base.cpp:110:15: note:   mismatched types ‘std::reference_wrapper<_Tp>’ and ‘void (*)(std::vector<std::__cxx11::basic_string<char> >::iterator&)’ {aka ‘void (*)(__gnu_cxx::__normal_iterator<std::__cxx11::basic_string<char>*, std::vector<std::__cxx11::basic_string<char> > >&)’}
  func["EQ"] = equal;
               ^~~~~
vcz_base.cpp:110:15: note:   couldn't deduce template parameter ‘_Functor’
